fix(seismic): Correct swell noise model and add direct wave removal
- Fixed swell noise generation to use linear moveout pattern
  - Changed from incorrect vertical coherent (horizontal lines)
  - Now uses apparent velocity 1000-2000 m/s for diagonal patterns
  - Matches actual seismic data characteristics with time shift per offset
  - Frequency range: 0.1-0.5 Hz for realistic low-frequency noise

- Added direct wave removal as Step 10
  - Implements top mute with adjustable mute velocity (default 1500 m/s)
  - Cosine taper for smooth transition (default 50 samples)
  - Inserted between Curvelet Denoise (Step 9) and WB Demultiple (Step 11)
  - Includes 3-panel visualization with mute line overlay

- Updated processing workflow order:
  Step 7: AAA → Step 8: Lowcut → Step 9: Curvelet →
  Step 10: Direct Mute [NEW] → Step 11: WB Demultiple → Step 12: Radon

- Updated variable chain: Curvelet outputs final_shot → Direct mute outputs after_direct_mute → WB uses after_direct_mute

--- a/Shot_Gather_Interactive.ipynb
+++ b/Shot_Gather_Interactive.ipynb
@@ -19,10 +19,11 @@
     "7. ✅ **Anomalous Amplitude Attenuation** ⭐ 노이즈 제거\n",
     "8. ✅ **Low-cut Filter (1.5 Hz)** ⭐ 저주파 제거\n",
     "9. ✅ **Curvelet Denoise** ⭐ 일반 노이즈 제거\n",
-    "10. ✅ **Water Bottom Demultiple** ⭐ Multiple 제거\n",
-    "11. ✅ **Radon Transform Demultiple** ⭐ Multiple 제거\n",
-    "12. ✅ 전체 비교\n",
-    "13. ✅ 데이터 저장 및 다운로드\n",
+    "10. ✅ **직접파 제거 (Direct Wave Mute)** ⭐ NEW\n",
+    "11. ✅ **Water Bottom Demultiple** ⭐ Multiple 제거\n",
+    "12. ✅ **Radon Transform Demultiple** ⭐ Multiple 제거\n",
+    "13. ✅ 전체 비교\n",
+    "14. ✅ 데이터 저장 및 다운로드\n",
     "\n",
     "---\n",
     "\n",
@@ -263,41 +264,92 @@
     "        return result\n",
     "    \n",
     "    def add_swell_noise(self, shot_gather, offsets, swell_strength=0.5):\n",
-    "        \"\"\"Swell Noise 추가 - Vertical Coherent Noise\n",
+    "        \"\"\"Swell Noise 추가 - Linear Moveout Coherent Noise\n",
     "        \n",
-    "        모든 트레이스에서 동일한 시간에 같은 진폭으로 나타나는 노이즈:\n",
+    "        대각선 패턴으로 나타나는 coherent noise:\n",
     "        - 주파수: 0.1-0.5 Hz (매우 낮음)\n",
-    "        - Vertical coherence: 모든 offset에서 동일한 값\n",
-    "        - 시간 변조: 느리게 진폭 변화\n",
-    "        - 케이블 전체 진동, 해양 너울의 수직 성분\n",
+    "        - Linear moveout: offset에 비례하는 시간 지연\n",
+    "        - Apparent velocity: 1000-2000 m/s (느린 속도)\n",
+    "        - 해양 표면파, 케이블 진동의 전파\n",
     "        \"\"\"\n",
     "        result = shot_gather.copy()\n",
     "        nt, n_traces = shot_gather.shape\n",
     "        signal_power = np.std(shot_gather)\n",
     "        \n",
-    "        # 여러 swell 주파수 성분 (0.1-0.5 Hz)\n",
+    "        # 여러 swell 성분 (각각 다른 apparent velocity)\n",
     "        n_components = np.random.randint(2, 4)\n",
-    "        swell_freqs = np.random.uniform(0.1, 0.5, n_components)\n",
     "        \n",
-    "        # Vertical coherent noise: 모든 트레이스에 동일한 시간 신호\n",
-    "        vertical_noise = np.zeros(nt)\n",
-    "        \n",
-    "        for swell_freq in swell_freqs:\n",
-    "            # 시간 변조 (너울의 진폭이 천천히 변화)\n",
-    "            modulation_freq = np.random.uniform(0.05, 0.15)\n",
-    "            time_modulation = 1 + 0.6 * np.sin(2 * np.pi * modulation_freq * self.time)\n",
+    "        for _ in range(n_components):\n",
+    "            # Swell 주파수\n",
+    "            swell_freq = np.random.uniform(0.1, 0.5)\n",
     "            \n",
-    "            # 기본 swell 파형 (vertical component)\n",
-    "            swell_component = np.sin(2 * np.pi * swell_freq * self.time) * time_modulation\n",
+    "            # Apparent velocity (느린 속도)\n",
+    "            apparent_velocity = np.random.uniform(1000, 2000)  # m/s\n",
+    "            \n",
+    "            # 시간 변조\n",
+    "            modulation_freq = np.random.uniform(0.05, 0.15)\n",
     "            \n",
     "            # 진폭\n",
     "            amplitude = swell_strength * signal_power * (0.8 + 0.4 * np.random.rand())\n",
     "            \n",
-    "            vertical_noise += amplitude * swell_component\n",
+    "            # 각 트레이스에 linear moveout 적용\n",
+    "            for j, offset in enumerate(offsets):\n",
+    "                # Linear moveout: t_arrival = t0 + offset / v_app\n",
+    "                time_shift = offset / apparent_velocity\n",
+    "                \n",
+    "                # 시간축 생성\n",
+    "                t_shifted = self.time - time_shift\n",
+    "                \n",
+    "                # 시간 변조\n",
+    "                time_modulation = 1 + 0.6 * np.sin(2 * np.pi * modulation_freq * self.time)\n",
+    "                \n",
+    "                # Swell 파형 (shifted time)\n",
+    "                swell_wave = np.zeros(nt)\n",
+    "                for it in range(nt):\n",
+    "                    if 0 <= t_shifted[it] <= self.time[-1]:\n",
+    "                        swell_wave[it] = np.sin(2 * np.pi * swell_freq * t_shifted[it]) * time_modulation[it]\n",
+    "                \n",
+    "                result[:, j] += amplitude * swell_wave\n",
     "        \n",
-    "        # 모든 트레이스에 동일한 vertical noise 추가\n",
-    "        for j in range(n_traces):\n",
-    "            result[:, j] += vertical_noise\n",
+    "        return result\n",
+    "    \n",
+    "    def remove_direct_wave(self, shot_gather, offsets, model: Dict, mute_velocity=1500, taper_length=50):\n",
+    "        \"\"\"직접파(Direct Wave) 제거 - Top Mute\n",
+    "        \n",
+    "        직접파는 해수층을 통해 직접 전파되는 파동:\n",
+    "        - 속도: 해수 음속 (~1500 m/s)\n",
+    "        - 가장 먼저 도달\n",
+    "        - Linear moveout: t = offset / velocity\n",
+    "        \n",
+    "        Top mute로 제거:\n",
+    "        - Mute velocity 이상의 속도를 가진 이벤트 제거\n",
+    "        - Taper를 적용하여 부드럽게 제거\n",
+    "        \"\"\"\n",
+    "        result = shot_gather.copy()\n",
+    "        nt, n_traces = shot_gather.shape\n",
+    "        \n",
+    "        for j, offset in enumerate(offsets):\n",
+    "            # Mute time 계산: t_mute = offset / mute_velocity\n",
+    "            if mute_velocity > 0:\n",
+    "                mute_time = offset / mute_velocity\n",
+    "            else:\n",
+    "                mute_time = 0\n",
+    "            \n",
+    "            mute_sample = int(mute_time / self.dt)\n",
+    "            \n",
+    "            # Mute 적용 (taper 포함)\n",
+    "            if mute_sample < nt:\n",
+    "                # 완전히 제거하는 구간\n",
+    "                result[:mute_sample, j] = 0\n",
+    "                \n",
+    "                # Taper 구간 (부드럽게 전환)\n",
+    "                taper_end = min(mute_sample + taper_length, nt)\n",
+    "                taper_samples = taper_end - mute_sample\n",
+    "                \n",
+    "                if taper_samples > 0:\n",
+    "                    # Cosine taper\n",
+    "                    taper = 0.5 * (1 - np.cos(np.pi * np.arange(taper_samples) / taper_samples))\n",
+    "                    result[mute_sample:taper_end, j] *= taper\n",
     "        \n",
     "        return result\n",
     "    \n",
@@ -634,6 +686,7 @@
     "print(\"  2. Radon Transform Demultiple\")\n",
     "print(\"  3. Anomalous Amplitude Attenuation\")\n",
     "print(\"  4. Curvelet Denoise\")\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -1087,10 +1140,142 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "step10"
+   },
+   "source": [
+    "## 🎯 Step 10: 직접파 제거 (Direct Wave Mute)\n",
+    "\n",
+    "**이 셀을 실행하면:**\n",
+    "- Top Mute 적용하여 직접파 제거\n",
+    "- Mute velocity 이상의 이벤트 제거 (일반적으로 ~1500 m/s)\n",
+    "- Cosine taper로 부드러운 전환\n",
+    "- **파라미터 조정**: `mute_velocity`, `taper_length`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "direct_wave_mute"
+   },
+   "outputs": [],
+   "source": [
+    "print(\"🎯 직접파 제거 (Direct Wave Mute) 적용 중...\")\n",
+    "print()\n",
+    "print(\"처리 방법:\")\n",
+    "print(\"   - Top Mute: 직접파 도달 시간 이전 제거\")\n",
+    "print(\"   - Mute line: t_mute = offset / mute_velocity\")\n",
+    "print(\"   - Cosine taper로 부드러운 전환\")\n",
+    "print()\n",
+    "print(\"⚙️ 파라미터 조정 가능:\")\n",
+    "print(\"   - mute_velocity: Mute 속도 (기본 1500 m/s)\")\n",
+    "print(\"   - taper_length: Taper 길이 (샘플 수, 기본 50)\")\n",
+    "print()\n",
+    "\n",
+    "# 🔧 여기서 파라미터 조정!\n",
+    "mute_velocity = 1500  # m/s, 이 속도 이상을 제거 (예: 1400, 1500, 1600)\n",
+    "taper_length = 50     # samples, taper 구간 길이 (예: 30, 50, 100)\n",
+    "\n",
+    "print(f\"\\n📌 현재 파라미터:\")\n",
+    "print(f\"   - Mute Velocity: {mute_velocity} m/s\")\n",
+    "print(f\"   - Taper Length: {taper_length} samples ({taper_length * processor.dt:.3f} s)\")\n",
+    "print()\n",
+    "\n",
+    "# Direct Wave Removal\n",
+    "after_direct_mute = processor.remove_direct_wave(final_shot, offsets, model, \n",
+    "                                                   mute_velocity=mute_velocity, \n",
+    "                                                   taper_length=taper_length)\n",
+    "\n",
+    "print(\"✅ 직접파 제거 완료!\")\n",
+    "print()\n",
+    "\n",
+    "# 통계\n",
+    "removed_direct = final_shot - after_direct_mute\n",
+    "\n",
+    "print(\"📈 통계:\")\n",
+    "print(f\"   - Before Direct Mute RMS: {np.sqrt(np.mean(final_shot**2)):.6f}\")\n",
+    "print(f\"   - After Direct Mute RMS:  {np.sqrt(np.mean(after_direct_mute**2)):.6f}\")\n",
+    "print(f\"   - Removed Direct Wave RMS: {np.sqrt(np.mean(removed_direct**2)):.6f}\")\n",
+    "print(f\"   - Energy Reduction: {(np.sqrt(np.mean(removed_direct**2))/np.sqrt(np.mean(final_shot**2)))*100:.1f}%\")\n",
+    "print()\n",
+    "\n",
+    "# 시각화 - Before/After 비교\n",
+    "print(\"📊 직접파 제거 전후 비교...\")\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(20, 8))\n",
+    "\n",
+    "vmax = np.percentile(np.abs(final_shot), 99)\n",
+    "\n",
+    "# Before\n",
+    "for i, offset in enumerate(offsets):\n",
+    "    trace = final_shot[:, i]\n",
+    "    trace_scaled = trace / vmax * 30\n",
+    "    axes[0].plot(offset + trace_scaled, processor.time, \"k-\", linewidth=0.3)\n",
+    "    axes[0].fill_betweenx(processor.time, offset, offset + trace_scaled,\n",
+    "                         where=(trace_scaled > 0), color=\"black\", alpha=0.6)\n",
+    "    # Mute line\n",
+    "    mute_time = offset / mute_velocity\n",
+    "    axes[0].plot([offset-30, offset+30], [mute_time, mute_time], \"r-\", linewidth=2, alpha=0.7)\n",
+    "\n",
+    "axes[0].set_xlabel(\"Offset (m)\", fontsize=12, fontweight=\"bold\")\n",
+    "axes[0].set_ylabel(\"Time (s)\", fontsize=12, fontweight=\"bold\")\n",
+    "axes[0].set_title(\"Before Direct Wave Mute\", fontsize=14, fontweight=\"bold\")\n",
+    "axes[0].invert_yaxis()\n",
+    "axes[0].grid(True, alpha=0.3, linestyle=\"--\")\n",
+    "axes[0].set_xlim([offsets[0] - 100, offsets[-1] + 100])\n",
+    "\n",
+    "# After\n",
+    "for i, offset in enumerate(offsets):\n",
+    "    trace = after_direct_mute[:, i]\n",
+    "    trace_scaled = trace / vmax * 30\n",
+    "    axes[1].plot(offset + trace_scaled, processor.time, \"k-\", linewidth=0.3)\n",
+    "    axes[1].fill_betweenx(processor.time, offset, offset + trace_scaled,\n",
+    "                         where=(trace_scaled > 0), color=\"black\", alpha=0.6)\n",
+    "\n",
+    "axes[1].set_xlabel(\"Offset (m)\", fontsize=12, fontweight=\"bold\")\n",
+    "axes[1].set_ylabel(\"Time (s)\", fontsize=12, fontweight=\"bold\")\n",
+    "axes[1].set_title(\"After Direct Wave Mute\", fontsize=14, fontweight=\"bold\")\n",
+    "axes[1].invert_yaxis()\n",
+    "axes[1].grid(True, alpha=0.3, linestyle=\"--\")\n",
+    "axes[1].set_xlim([offsets[0] - 100, offsets[-1] + 100])\n",
+    "\n",
+    "# Removed\n",
+    "for i, offset in enumerate(offsets):\n",
+    "    trace = removed_direct[:, i]\n",
+    "    trace_scaled = trace / vmax * 30\n",
+    "    axes[2].plot(offset + trace_scaled, processor.time, \"k-\", linewidth=0.3)\n",
+    "    axes[2].fill_betweenx(processor.time, offset, offset + trace_scaled,\n",
+    "                         where=(trace_scaled > 0), color=\"black\", alpha=0.6)\n",
+    "\n",
+    "axes[2].set_xlabel(\"Offset (m)\", fontsize=12, fontweight=\"bold\")\n",
+    "axes[2].set_ylabel(\"Time (s)\", fontsize=12, fontweight=\"bold\")\n",
+    "axes[2].set_title(\"Removed Direct Wave\", fontsize=14, fontweight=\"bold\")\n",
+    "axes[2].invert_yaxis()\n",
+    "axes[2].grid(True, alpha=0.3, linestyle=\"--\")\n",
+    "axes[2].set_xlim([offsets[0] - 100, offsets[-1] + 100])\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print()\n",
+    "print(\"💡 해석:\")\n",
+    "print(\"   - 좌측: 직접파가 선형 moveout으로 보임 (빨간 선이 mute line)\")\n",
+    "print(\"   - 중앙: 직접파가 제거되고 반사파만 남음\")\n",
+    "print(\"   - 우측: 제거된 직접파 확인\")\n",
+    "print()\n",
+    "print(\"🔧 파라미터 조정 방법:\")\n",
+    "print(\"   - mute_velocity ↓ → 더 많이 제거 (단, 얕은 반사파 손실 주의)\")\n",
+    "print(\"   - mute_velocity ↑ → 보수적 제거 (직접파 잔존 가능)\")\n",
+    "print(\"   - taper_length ↑ → 부드러운 전환 (artifacts 감소)\")\n",
+    "print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "id": "step7"
    },
    "source": [
-    "## 🌊 Step 10: Water Bottom Demultiple\n",
+    "## 🌊 Step 11: Water Bottom Demultiple\n",
     "\n",
     "**이 셀을 실행하면:**\n",
     "- 해저면-해면 멀티플 제거\n",
@@ -1116,24 +1301,25 @@
     "\n",
     "# Water Bottom Demultiple\n",
     "wb_demult_strength = 0.8\n",
-    "after_wb = processor.water_bottom_demultiple(final_shot, model, strength=wb_demult_strength)\n",
+    "after_wb = processor.water_bottom_demultiple(after_direct_mute, model, strength=wb_demult_strength)\n",
     "\n",
     "print(\"✅ Water Bottom Demultiple 완료!\")\n",
     "print()\n",
     "\n",
     "# 통계\n",
-    "removed_wb_mult = final_shot - after_wb\n",
+    "removed_wb_mult = after_direct_mute - after_wb\n",
     "\n",
     "print(\"📈 통계:\")\n",
-    "print(f\"   - Before WB Demult RMS: {np.sqrt(np.mean(final_shot**2)):.6f}\")\n",
+    "print(f\"   - Before WB Demult RMS: {np.sqrt(np.mean(after_direct_mute**2)):.6f}\")\n",
     "print(f\"   - After WB Demult RMS:  {np.sqrt(np.mean(after_wb**2)):.6f}\")\n",
     "print(f\"   - Removed Multiples RMS: {np.sqrt(np.mean(removed_wb_mult**2)):.6f}\")\n",
-    "print(f\"   - Reduction: {(1 - np.sqrt(np.mean(after_wb**2))/np.sqrt(np.mean(final_shot**2)))*100:.1f}%\")\n",
+    "print(f\"   - Reduction: {(1 - np.sqrt(np.mean(after_wb**2))/np.sqrt(np.mean(after_direct_mute**2)))*100:.1f}%\")\n",
     "print()\n",
     "\n",
     "# 시각화\n",
     "print(\"📈 Water Bottom Demultiple 결과 시각화...\")\n",
-    "processor.plot_shot_gather(after_wb, offsets, \"🌊 After Water Bottom Demultiple\")\n"
+    "processor.plot_shot_gather(after_wb, offsets, \"🌊 After Water Bottom Demultiple\")\n",
+    "\n"
    ]
   },
   {
@@ -1142,7 +1328,7 @@
     "id": "step8"
    },
    "source": [
-    "## 🔄 Step 11: Radon Transform Demultiple (인터랙티브)\n",
+    "## 🔄 Step 12: Radon Transform Demultiple (인터랙티브)\n",
     "\n",
     "**이 셀을 실행하면:**\n",
     "- Radon 변환으로 t-x → τ-p 도메인 변환\n",
