fix(workflow): Correct Step 7 AAA input from after_radon to noisy_shot
Issue: Step 7 (AAA) was using undefined variable 'after_radon' as input
- after_radon is defined in Step 12, not available in Step 7
- Caused workflow execution to fail

Solution: Changed AAA input to 'noisy_shot' (correct workflow order)
- Updated statistics calculation to use noisy_shot as baseline
- Workflow now follows proper sequence:
  noisy_shot → AAA → Lowcut → Curvelet → Direct Mute → WB → Radon

--- a/Shot_Gather_Interactive.ipynb
+++ b/Shot_Gather_Interactive.ipynb
@@ -838,7 +838,7 @@
     "print()\n",
     "\n",
     "# Anomalous Amplitude Attenuation\n",
-    "after_aaa = processor.anomalous_amplitude_attenuation(after_radon, \n",
+    "after_aaa = processor.anomalous_amplitude_attenuation(noisy_shot, \n",
     "                                                       window_size=50, \n",
     "                                                       threshold_factor=3.0)\n",
     "\n",
@@ -846,13 +846,13 @@
     "print()\n",
     "\n",
     "# 통계\n",
-    "removed_anom = after_radon - after_aaa\n",
+    "removed_anom = noisy_shot - after_aaa\n",
     "\n",
     "print(\"📈 통계:\")\n",
-    "print(f\"   - Before AAA RMS: {np.sqrt(np.mean(after_radon**2)):.6f}\")\n",
+    "print(f\"   - Before AAA RMS: {np.sqrt(np.mean(noisy_shot**2)):.6f}\")\n",
     "print(f\"   - After AAA RMS:  {np.sqrt(np.mean(after_aaa**2)):.6f}\")\n",
     "print(f\"   - Attenuated RMS: {np.sqrt(np.mean(removed_anom**2)):.6f}\")\n",
-    "print(f\"   - Anomaly Reduction: {(np.sqrt(np.mean(removed_anom**2))/np.sqrt(np.mean(after_radon**2)))*100:.1f}%\")\n",
+    "print(f\"   - Anomaly Reduction: {(np.sqrt(np.mean(removed_anom**2))/np.sqrt(np.mean(noisy_shot**2)))*100:.1f}%\")\n",
     "print()\n",
     "\n",
     "# 시각화\n",
