fix(fk): Correct FK domain direct wave removal logic
Critical bug fix: FK filtering was preserving direct wave instead of removing it

Problem:
- FK domain velocity calculation was correct (v = 2πf/k)
- But taper logic was inverted
- Direct wave velocity → taper applied → PRESERVED (wrong)
- Should be: direct wave velocity → removal applied → REMOVED

Solution:
- Changed taper calculation for clarity
- Removal taper: 1.0 at direct wave velocity (full removal)
                 0.0 at tolerance boundary (preserve)
- Apply (1 - removal) to preserve signal outside direct wave

Taper logic:
  norm_dist = |v - v_water| / tolerance  (0 at center, 1 at boundary)
  removal = 0.5 * (1 + cos(π * norm_dist))  (1 at center, 0 at boundary)
  preservation = 1 - removal

Now correctly removes direct wave while preserving reflections

--- a/Shot_Gather_Interactive.ipynb
+++ b/Shot_Gather_Interactive.ipynb
@@ -719,22 +719,31 @@
     "        \n",
     "        for i_freq in range(nt):\n",
     "            freq = freqs[i_freq]\n",
-    "            if abs(freq) < 1e-6:\n",
+    "            if abs(freq) < 1e-6:  # DC component 보존\n",
     "                continue\n",
     "            \n",
     "            for i_kx in range(n_traces):\n",
     "                k = kx[i_kx]\n",
     "                \n",
+    "                # 속도 계산: v = ω/k = 2πf/k\n",
     "                if abs(k) > 1e-6:\n",
     "                    velocity = abs(2 * np.pi * freq / k)\n",
     "                else:\n",
-    "                    velocity = 1e9\n",
+    "                    velocity = 1e9  # 무한대 (수직)\n",
     "                \n",
+    "                # 직접파 속도 범위 내면 제거\n",
     "                if abs(velocity - water_velocity) < velocity_tolerance:\n",
     "                    velocity_diff = abs(velocity - water_velocity)\n",
-    "                    taper = velocity_diff / velocity_tolerance\n",
-    "                    taper = 0.5 * (1 - np.cos(np.pi * taper))\n",
-    "                    fft2d_filtered[i_freq, i_kx] *= taper\n",
+    "                    # Normalized distance: 0 (중심, 직접파) → 1 (경계)\n",
+    "                    norm_dist = velocity_diff / velocity_tolerance\n",
+    "                    \n",
+    "                    # Removal taper (cosine)\n",
+    "                    # norm_dist = 0 → removal = 1.0 (완전 제거)\n",
+    "                    # norm_dist = 1 → removal = 0.0 (보존)\n",
+    "                    removal = 0.5 * (1 + np.cos(np.pi * norm_dist))\n",
+    "                    \n",
+    "                    # Apply removal (1 - removal = preservation)\n",
+    "                    fft2d_filtered[i_freq, i_kx] *= (1.0 - removal)\n",
     "        \n",
     "        result = np.real(np.fft.ifft2(fft2d_filtered))\n",
     "        return result\n",
